--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "devDependencies": {
-    "phantomjs": "~1.9.2",
-    "docco": "~0.6.3"
+    "docco": "~0.6.3",
+    "mocha": "~1.18.2"
   },
   "repository": {
     "type": "git",
