--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "karma-firefox-launcher": "~0.1.3",
     "karma-chrome-launcher": "~0.1.3",
     "karma-opera-launcher": "~0.1.0",
-    "karma-html2js-preprocessor": "~0.1.0"
+    "karma-html2js-preprocessor": "~0.1.0",
+    "jsdoc": "~3.2.2"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/roperzh/essential.js/issues"
+  },
+  "dependencies": {
+    "ink-docstrap": "~0.3.0-0"
   }
 }
