--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "karma-chrome-launcher": "~0.1.3",
     "karma-opera-launcher": "~0.1.0",
     "karma-html2js-preprocessor": "~0.1.0",
-    "jsdoc": "~3.2.2"
+    "jsdoc": "~3.2.2",
+    "ink-docstrap": "~0.3.0-0"
   },
   "repository": {
     "type": "git",
@@ -27,8 +28,5 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/roperzh/essential.js/issues"
-  },
-  "dependencies": {
-    "ink-docstrap": "~0.3.0-0"
   }
 }
