--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "docco": "~0.6.3",
-    "karma": "~0.12.6",
+    "karma": "~0.12.9",
     "karma-mocha": "~0.1.3",
     "karma-chai": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.4",
@@ -17,7 +17,7 @@
     "karma-opera-launcher": "~0.1.0",
     "karma-html2js-preprocessor": "~0.1.0",
     "jsdoc": "~3.2.2",
-    "ink-docstrap": "~0.3.0-0"
+    "ink-docstrap": "~0.3.0-0",
   },
   "repository": {
     "type": "git",
