--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "karma-html2js-preprocessor": "~0.1.0",
     "jsdoc": "~3.2.2",
     "ink-docstrap": "~0.3.0-0",
+    "karma-coverage": "~0.2.1"
   },
   "repository": {
     "type": "git",
