Continuous integration set-up: updates secret values on travis config file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ node_js:
 
 env:
   global:
-  - secure: gc/SWW1AtwI+sCs4rt7DB5SLj48fHd8/etUQ8+WH4WPWq3SP8GnqG7HBaa36qwY314s5AtMGe2yxwFec392nHgoIVwRphLlCM2rOBL8kSWfwuB5MVNyGChLwXiKKSX7KUfiFHB8i269qUTnQpEb8FvVyUm+KBn0V/8Jmw9sxhNg=
-  - secure: IRmoyVTFEb9qOlPgnMDlQtS+riY92fB53N3J8bLrJAEqGJRFDcYUZ5s+gjsZL74RbUT5C2rYBrtikx+HekHQPG9FYLWmPrjkS7wMdN+NYqbUB3prqFlMxuETtE36j8XJUZDxaSKyyAcRk2izcLhBf63bJgNSU/AHuRnovqhRaBw=
+  - secure: "FePxZhCa9kD/waPSpsMX8SFsD3UgN8iPR1JZoYn9yV0Fyx8NZdQHlJFFmtlnWMmoc8j6r48M9BBNGhb6S6MqKSBsSe+E7YM+/wFO3wtqyZvuiRmOo9k6zi9Zew/cFbsNpyngBDUZHND/NfBQJsFWHp9ZeoP0HAsWmMElLpkU6s0="
+  - secure: "dgiLI0hUMkd7qIhw4gZt4Z0qhQ1OmwGC2XGDV+b4K+TbrMK1KKJK3uWupdXLB9EDpp1ILCNK/IqYI+4zrZUkQRSHoF1yHc4qvSff6ZpCcK7H/LVdTpG0bgpZ0REgNMtYzSw6L9WmDnv4lNwsciDpnXD9Z0RIxBKgxQCrdhxd1gg="
