--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "ink-docstrap": "~0.3.0-0",
     "karma-coverage": "~0.2.1",
     "karma-sauce-launcher": "~0.2.7",
-    "coveralls": "~2.10.0"
+    "coveralls": "~2.10.0",
+    "uglify-js": "~2.4.13",
+    "npm": "~1.4.7"
   },
   "repository": {
     "type": "git",
