--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "karma-chrome-launcher": "~0.1.3",
     "karma-opera-launcher": "~0.1.0",
     "karma-html2js-preprocessor": "~0.1.0",
-    "jsdoc": "~3.2.2",
-    "ink-docstrap": "~0.3.0-0",
     "karma-coverage": "~0.2.1",
     "karma-sauce-launcher": "~0.2.7",
     "coveralls": "~2.10.0",
     "uglify-js": "~2.4.13",
-    "npm": "~1.4.7"
+    "docco": "~0.6.3"
   },
   "repository": {
     "type": "git",
