Add more keywords to the bower.json file

--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,10 @@
   "keywords": [
     "essential",
     "framework",
+    "microframework",
     "behavior",
-    "behaviors"
+    "behaviors",
+    "essentialjs"
   ],
   "license": "MIT",
   "ignore": [
